Added more questionnaires and SAM

--- a/app/SpaceOddity.cfg
+++ b/app/SpaceOddity.cfg
@@ -14,6 +14,10 @@ CONDITIONS_NUM = 2
 PAGE_LIST = [
     {'name': 'Consent', 'path': 'consent'},
     {'name': 'Prolific', 'path': 'questionnaire/prolificStart'},
+    {'name': 'Introduction', 'path': 'instructions/introduction'},
+    {'name': 'Questionnaire 1', 'path': 'questionnaire/general_se/first'},
+    {'name': 'Questionnaire 2', 'path': 'questionnaire/domain_se/first'},
+    {'name': 'pre-SAM', 'path': 'task_sam'},
     {'name': 'Introduction', 'path': 'instructions/SpaceOddity_instructions'},
     
     #game pages
@@ -36,13 +40,17 @@ PAGE_LIST = [
             ]
         },
 
-    #questionnaires
-    {'name': 'Questionnaire 1', 'path': 'questionnaire/task_se'},
-    {'name': 'Questionnaire 2', 'path': 'questionnaire/domain_se'},
-    {'name': 'Questionnaire 3', 'path': 'questionnaire/general_se'},
-    {'name': 'Questionnaire 5', 'path': 'questionnaire/PENS'},
-    {'name': 'Questionnaire 4', 'path': 'questionnaire/IMI'},
-    {'name': 'Demographics', 'path': 'questionnaire/demographics'},
+    #post questionnaires
+    {'name': 'Instruction 2', 'path': 'instructions/SpaceOddity_instructions_post'},
+    {'name': 'Questionnaire 3', 'path': 'questionnaire/task_se'},
+    {'name': 'Questionnaire 4', 'path': 'questionnaire/domain_se/second'},
+    {'name': 'Questionnaire 5', 'path': 'questionnaire/general_se/second'},
+    {'name': 'post-SAM', 'path': 'task_sam2'},
+    {'name': 'Questionnaire 6', 'path': 'questionnaire/PENS'},
+    {'name': 'Questionnaire 7', 'path': 'questionnaire/IMI'},
+    {'name': 'Questionnaire 8', 'path': 'questionnaire/performativeChallenge'},
+    #{'name': 'Demographics', 'path': 'questionnaire/demographics'},
+    {'name': 'Demographics', 'path': 'questionnaire/demographics_Copy'},
     {'name': 'Debrief', 'path': 'instructions/debrief'},
     {'name': 'End', 'path': 'end'}
 ]
@@ -63,9 +71,9 @@ CONSENT_TEXT = CONSENT_TEXT = """
 <p>
     <b>Procedures:</b>
     <ul>
+        <li>You will complete questionnaires asking questions about yourself, and your experience with games in general. </li>
         <li>You will play a digital game. </li>
-        <li>You will then complete questionnaires asking questions about yourself, and relating to your experience playing the game. </li>
-        <li>You will then complete questionnaires asking additional questions about yourself, and your experience with games in general. </li>
+        <li>You will then complete questionnaires asking questions about your experience playing the game and additional questions about yourself. </li>
     </ul>
 </p>
 <p><b>Funded by:</b> The Natural Sciences and Engineering Research Council of Canada (NSERC).</p>
